<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/view"
	android:layout_width="match_parent"
	android:layout_height="@dimen/view_view_holder_view_height">

	<android.support.constraint.ConstraintLayout
		android:id="@+id/repo_item_constraint_layout"
		android:layout_width="0dp"
		android:layout_height="@dimen/view_view_holder_repo_item_constraint_layout_height"
		android:layout_marginEnd="@dimen/view_view_holder_repo_item_constraint_layout_margin_end"
		android:layout_marginStart="@dimen/view_view_holder_repo_item_constraint_layout_margin_start"
		android:layout_marginTop="@dimen/view_view_holder_repo_item_constraint_layout_margin_top"
		android:background="@drawable/view_view_holder_repo_item_constraint_layout_background"
		app:layout_constraintHorizontal_weight="0.94"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="12dp"
		tools:layout_editor_absoluteY="9dp">
	
		<TextView
			android:id="@+id/repo_link_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/view_view_holder_repo_link_text_view_margin_bottom"
			android:layout_marginStart="@dimen/view_view_holder_repo_link_text_view_margin_start"
			android:fontFamily="@font/font_roboto_regular"
			android:gravity="start"
			android:letterSpacing="0"
			android:text="@string/view_view_holder_repo_link_text_view_text"
			android:textColor="@color/view_view_holder_repo_link_text_view_text_color"
			android:textSize="@dimen/view_view_holder_repo_link_text_view_text_size"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			tools:layout_editor_absoluteX="15dp"
			tools:layout_editor_absoluteY="134dp"/>
	
		<TextView
			android:id="@+id/a_cimplementation_otext_view"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="@dimen/view_view_holder_a_cimplementation_otext_view_margin_end"
			android:layout_marginStart="@dimen/view_view_holder_a_cimplementation_otext_view_margin_start"
			android:layout_marginTop="@dimen/view_view_holder_a_cimplementation_otext_view_margin_top"
			android:fontFamily="@font/font_roboto_regular"
			android:gravity="start"
			android:letterSpacing="0"
			android:text="@string/view_view_holder_a_cimplementation_otext_view_text"
			android:textColor="@color/view_view_holder_a_cimplementation_otext_view_text_color"
			android:textSize="@dimen/view_view_holder_a_cimplementation_otext_view_text_size"
			app:layout_constraintHorizontal_weight="0.92"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/repo_icon_image_view"
			tools:layout_editor_absoluteX="15dp"
			tools:layout_editor_absoluteY="88dp"/>
	
		<TextView
			android:id="@+id/author_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/view_view_holder_author_text_view_margin_start"
			android:layout_marginTop="@dimen/view_view_holder_author_text_view_margin_top"
			android:fontFamily="@font/font_roboto_light"
			android:gravity="center"
			android:letterSpacing="0"
			android:text="@string/view_view_holder_author_text_view_text"
			android:textColor="@color/view_view_holder_author_text_view_text_color"
			android:textSize="@dimen/view_view_holder_author_text_view_text_size"
			app:layout_constraintLeft_toRightOf="@+id/repo_icon_image_view"
			app:layout_constraintTop_toBottomOf="@+id/repo_name_text_view"
			tools:layout_editor_absoluteX="89dp"
			tools:layout_editor_absoluteY="52dp"/>
	
		<TextView
			android:id="@+id/repo_name_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/view_view_holder_repo_name_text_view_margin_start"
			android:layout_marginTop="@dimen/view_view_holder_repo_name_text_view_margin_top"
			android:fontFamily="@font/font_roboto_bold"
			android:gravity="center"
			android:letterSpacing="0"
			android:text="@string/view_view_holder_repo_name_text_view_text"
			android:textColor="@color/view_view_holder_repo_name_text_view_text_color"
			android:textSize="@dimen/view_view_holder_repo_name_text_view_text_size"
			app:layout_constraintLeft_toRightOf="@+id/repo_icon_image_view"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="88dp"
			tools:layout_editor_absoluteY="23dp"/>
	
		<ImageView
			android:id="@+id/repo_icon_image_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/view_view_holder_repo_icon_image_view_margin_start"
			android:layout_marginTop="@dimen/view_view_holder_repo_icon_image_view_margin_top"
			android:scaleType="center"
			android:src="@drawable/repo_icon"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="15dp"
			tools:layout_editor_absoluteY="16dp"/>
	</android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>